force-app/main/default/objects/Blood_Donor__c/Blood_Donor__c.object-meta.xml
<CustomObject>
    <label>Blood Donor</label>
    <nameField>
        <label>Blood Donor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blood Donors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>