force-app/main/default/objects/Blood_Donor__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age calculation through formula field</description>
    <formula>year(today()) - year(DOB__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>age calculation.</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>