force-app/main/default/objects/Blood_Donor__c/fields/Days_remaining_to_donate__c.field-meta.xml
<CustomField>
    <fullName>Days_remaining_to_donate__c</fullName>
    <formula>IF(today() -  Last_Donated_Date__c &gt; 90, 0, 90 - (today() -  Last_Donated_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days remaining to donate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>