force-app/main/default/objects/Blood_Donor__c/fields/Donor_Id__c.field-meta.xml
<CustomField>
    <fullName>Donor_Id__c</fullName>
    <displayFormat>BD-{000}</displayFormat>
    <label>Donor Id</label>
    <type>AutoNumber</type>
</CustomField>