force-app/main/default/objects/Blood_Donor__c/fields/Eligible_for_Blood_Donation__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Blood_Donation__c</fullName>
    <formula>AND( Age__c &gt; 18,  Weight__c &gt; 50, today() -  Last_Donated_Date__c &gt; 90)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Blood Donation</label>
    <type>Checkbox</type>
</CustomField>