force-app/main/default/objects/Blood_Donor__c/fields/Last_Donated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Donated_Date__c</fullName>
    <label>Last Donated Date</label>
    <type>Date</type>
</CustomField>