force-app/main/default/objects/Blood_Donor__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telangana</fullName>
            </value>
            <value>
                <fullName>Tamil nadu</fullName>
            </value>
            <value>
                <fullName>Andhra pradesh</fullName>
            </value>
            <value>
                <fullName>kerala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>