force-app/main/default/objects/Blood_Donor__c/validationRules/age_less_than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>age_less_than_18</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 18</errorConditionFormula>
    <errorMessage>records can not be saved for age less then 18 years</errorMessage>
</ValidationRule>