force-app/main/default/objects/Blood_Donor__c/validationRules/ph_no_must_be_10.validationRule-meta.xml
<ValidationRule>
    <fullName>ph_no_must_be_10</fullName>
    <active>false</active>
    <errorConditionFormula>OR(LEN( Phone_number__c ) &lt;&gt; 10, NOT( ISNUMBER( Phone_number__c )))</errorConditionFormula>
    <errorMessage>phone num must be equal to 10 digits</errorMessage>
</ValidationRule>