force-app/main/default/objects/Blood_Donor__c/validationRules/Weight_greater_than_50.validationRule-meta.xml
<ValidationRule>
    <fullName>Weight_greater_than_50</fullName>
    <active>false</active>
    <errorConditionFormula>Weight__c &lt; 50</errorConditionFormula>
    <errorDisplayField>Weight__c</errorDisplayField>
    <errorMessage>Weight should be greater than 50</errorMessage>
</ValidationRule>