force-app/main/default/objects/Blood_Donor__c/listViews/List_of_A_Donors_in_chennai_district.listView-meta.xml
<ListView>
    <fullName>List_of_A_Donors_in_chennai_district</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blood_Group__c</field>
        <operation>equals</operation>
        <value>A+</value>
    </filters>
    <label>List of A+ Donors in chennai district</label>
</ListView>