force-app/main/default/objects/Blood_Donor__c/listViews/List_of_O_donors_in_vellore_district.listView-meta.xml
<ListView>
    <fullName>List_of_O_donors_in_vellore_district</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Blood_Group__c</field>
        <operation>equals</operation>
        <value>O-</value>
    </filters>
    <label>List of  O- donors in vellore district</label>
</ListView>